# pytest-datadir

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  LICENSE  README.md  RELEASING.rst  appveyor.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: deploy.yml  linters.yml  main.yml  test.yml
pytest_datadir/: __init__.py  plugin.py
src/pytest_datadir/: __init__.py  plugin.py
tests/: test_hello.py  test_nonexistent.py  test_pathlib.py  test_scoped_datadir.py
tests/data/shared_directory/: file.txt
tests/foo/bar/: test_hello_submodule.py
tests/other_data/: other_data.txt
tests/test_hello/local_directory/: file.txt
